﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1184: Fix double relation creation if no further members are added. 

1182: updated default preset and translations.

1180: workaround for issue with onFocusChange listeners being called when fragment views are destroyed, numerous build improvements.
 
1178: changes for building with buildship, export of Notes in OSN format, better file picker for saving and reading files, search button added to "Find" dialog

1176: fix regression caused by 1174, preserve history better when merging nodes and ways.

1174: add support for read-only API (experimental) and bug fixes.

1172: add splash screen on startup and make dimming non-downloaded areas a pref.

1170: add literal substring matching to preset search 

1168: various small internal changes, handle match=”none” the same as “key for building the form display.

1166: updated preset.

1164: force show keyboard and dropdown when adding with name suggestions.

1162: protect against broken NMEA sentences, update presets.

1160: better support for language specific name tags.
 
1158: sort combo and multi-select values correctly.

1156: properly quote delimiter character in multi-selects, updated preset and translations.

1154: fix regression when displaying multiple values in a multi-select in the form UI, try to make hiding the navbar more reliable, updated preset.

1152: add a label to nodes without an icon, if icons are turned off, all nodes will get a label, Delete, copy, cut and paste of tags in form UI. Fix issue with box picker when nothing was downloaded.

1150: fix issue with preset search that stopped all results being shown, updated presets and translations.

1148: made name suggestions work better with the form UI

1146: bumped Android version number

1142: minor bug fixes and improvements.

1142: fix error in way bounding box calculation and add zoom to selection function.
